--- a/TapijtvanVlaardingen/html/contact.html
+++ b/TapijtvanVlaardingen/html/contact.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="bgr">
-<header><p class="koptext">Tapijt van Vlaardingen</p></header>
+<header><h1 class="koptext">Tapijt van Vlaardingen</h1></header>
     <nav>
         <a href="../index.html" class="aab">Home</a>
            <a href="project.html" class="aab">Project</a>
