--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <div class="breedte"></div>
   <div> 
 <header><h1 class="koptext">Tapijt van Vlaardingen</h1></header>
     <nav>
@@ -53,9 +54,11 @@
 <div>
 <div class="balk">Het begin!</div>
 </div>
-<div>
+<div >
    <p class="ttx">De scènes over de Slag bij Vlaardingen in 1018!</p></div>
+
    <div> <img src="img/tapijt2.jpg" class="maat"></div>
+
    <div>
    <p class="ttx"> Rovers, Friezen en handelaren: een keizerlijk leger in het Merwedewoud</p> 
 
@@ -265,7 +268,7 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
         <a href="http://www.johnrabou.nl/" target="_blank"><img src="img/johnrabou.jpg" class="positie"></a>
        <img src="img/TvV.jpg" class="positie">
 </footer>
-
+</div>
 </body>
 
 </html>
