--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="breedte"></div>
+  <div class="breedte">
   <div> 
 <header><h1 class="koptext">Tapijt van Vlaardingen</h1></header>
     <nav>
