--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -12,49 +12,11 @@
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <link rel="stylesheet" type="text/css" href="css/style.css">
-<style>
-  /* For mobile phones: */
-[class*="col-"] {
-  width: 100%;
-}
-
-@media only screen and (min-width: 600px) {
-  /* For tablets: */
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
-}
-
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-}
-</style>
 
 </head>
 
 <body>
-  <div class="col-s-12 col-12">
+  <div>
   <div> 
 <header><h1 class="koptext">Tapijt van Vlaardingen</h1></header>
     <nav>
@@ -76,7 +38,7 @@
 <iframe width="560" height="315" class="midpos" src="https://www.youtube.com/embed/SQko1O5ASyQ?si=c93KZbRdRZ_v1x69" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
    
-<div>
+<div class="breedte">
       <p class="ttr"> 
         
        
@@ -92,7 +54,7 @@
 <div>
 <div class="balk">Het begin!</div>
 </div>
-<div >
+<div>
    <p class="ttx">De scènes over de Slag bij Vlaardingen in 1018!</p></div>
 
    <div> <img src="img/tapijt2.jpg" class="maat"></div>
