--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -26,7 +26,7 @@
 
             <a href="https://www.facebook.com/TapijtVanVlaardingen/" class="aab position" target="_blank">Facebook</a>
            </nav>
-</div>
+</div class="breedte">
 <div>
 
 
@@ -38,7 +38,7 @@
 <iframe width="560" height="315" class="midpos" src="https://www.youtube.com/embed/SQko1O5ASyQ?si=c93KZbRdRZ_v1x69" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
    
-<div class="breedte">
+<div>
       <p class="ttr"> 
         
        
