--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -12,7 +12,12 @@
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <link rel="stylesheet" type="text/css" href="css/style.css">
+<style>
+[class*="col-"] {
+  width: 100%;
+}
 
+</style>
 </head>
 
 <body>
@@ -26,7 +31,7 @@
 
             <a href="https://www.facebook.com/TapijtVanVlaardingen/" class="aab position" target="_blank">Facebook</a>
            </nav>
-</div class="breedte">
+</div>
 <div>
 
 
