--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -43,7 +43,7 @@
 <iframe width="560" height="315" class="midpos" src="https://www.youtube.com/embed/SQko1O5ASyQ?si=c93KZbRdRZ_v1x69" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
    
-<div>
+<div class="col-">
       <p class="ttr"> 
         
        
