--- a/MuziekschoolH&J/index.html
+++ b/MuziekschoolH&J/index.html
@@ -26,7 +26,7 @@
 </div>
 <div class="col-12 kleur"></div>
 
-<table><tr><td class="col-3 klr">
+<table><tr><td class="klr">
 
     
 
@@ -50,7 +50,7 @@
 </td>
 
 
-<td class="col-9 plaats">
+<td class="plaats">
 
 
 
