--- a/MuziekschoolH&J/index.html
+++ b/MuziekschoolH&J/index.html
@@ -25,7 +25,7 @@
     </nav>
 </div>
 <div class="col-12 kleur"></div>
-
+<div class="row">
 <table><tr><td class="klr">
 
     
@@ -87,7 +87,7 @@
 
 </tr>
 </table>
-
+</div>
 
 <footer class="col-12"><p>© Copyright 2021 Muziekschool H&J 
 </p><p>(Dit is een oefenopdracht, alle informatie op deze website is fictief.)
