--- a/MuziekschoolH&J/html/contact.html
+++ b/MuziekschoolH&J/html/contact.html
@@ -25,7 +25,7 @@
     </nav>
 </div>
 <div class="col-12 kleur"></div>
-<table><tr><td class="col-3 klr">
+<div class="col-3 klr">
     <h2 class="positie">Adresgegevens</h2>
     <p>Muziekschool H&J</p>
     <p>t.a.v Hannah en Jesse</p>
@@ -38,8 +38,8 @@
      width="300" height="350"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
-</td>
-<td class="col-9 plaats">
+</div>
+<div class="col-9 plaats">
     <h2 class="klrt tek">Contact</h2>
     <p><b>U kunt een bericht achterlaten via onderstaand contactformulier.</b></p>
 
@@ -68,28 +68,8 @@
 
  <button type="submit">Verzend</button>
 
-
-
-
-
-
-
-
-
-
-
-
 </form>
-
-
-
-</td>
-
-
-
-
-</tr>
-</table>
+</div>
 <footer class="col-12"><p>© Copyright 2021 Muziekschool H&J 
 </p><p>(Dit is een oefenopdracht, alle informatie op deze website is fictief.)
 </p></footer>   
