--- a/MuziekschoolH&J/html/tarieven.html
+++ b/MuziekschoolH&J/html/tarieven.html
@@ -25,7 +25,7 @@
     </nav>
 </div>
 <div class="col-12 kleur"></div>
-<table><tr><td class="col-3 klr">
+<div class="col-3 klr">
     <h2 class="positie">Tarieven</h2>
     
         <p>Individuele les: € 30,- per half uur.</p>
@@ -42,8 +42,8 @@
     
 
 
-</td>
-<td class="col-9 plaats">
+    </div>
+<div class="col-9 plaats">
     <h2 class="klrt tek">Voorwaarden</h2>
     <p><b>Algemene voorwaarden - Muziekschool H&J</b></p>
     <p>Artikel 1: Inschrijving</p><hr>
@@ -57,13 +57,12 @@
 
 
 
-</td>
+</div>
 
 
 
 
-</tr>
-</table>
+
 <footer class="col-12"><p>© Copyright 2021 Muziekschool H&J 
 </p><p>(Dit is een oefenopdracht, alle informatie op deze website is fictief.)
 </p></footer>
