--- a/MuziekschoolH&J/index.html
+++ b/MuziekschoolH&J/index.html
@@ -24,9 +24,10 @@
 
     </nav>
 </div>
+
 <div class="col-12 kleur"></div>
-<div class="row">
-<table><tr><td class="klr">
+
+<div class="col-3 klr">
 
     
 
@@ -47,11 +48,11 @@
     </p>
 
 
-</td>
+</div>
 
 
-<td class="plaats">
-
+<div class="col-9 plaats right">
+<div class="aside">
 
 
 <h2 class="positie klrt">Welkom bij muziekschool H&J</h2>
@@ -79,15 +80,9 @@
      om meer informatie te krijgen. Je kunt dan ook kennismaken en kijken of je een klik hebt met Hannah en/of Jesse.
 </p>
 
-
-</td>
-
-
-
-
-</tr>
-</table>
 </div>
+</div>
+
 
 <footer class="col-12"><p>© Copyright 2021 Muziekschool H&J 
 </p><p>(Dit is een oefenopdracht, alle informatie op deze website is fictief.)
