--- a/MuziekschoolH&J/html/overons.html
+++ b/MuziekschoolH&J/html/overons.html
@@ -25,18 +25,18 @@
     </nav>
 </div>
 <div class="col-12 kleur"></div>
-<table><tr><td class="col-3 klr">
+<div class="col-3 klt">
 
 <h2 class="positie">Muziekschool voor iedereen!</h2>
 
-<img src="../img/kind.jpeg" width="260" height="500" class="pos" alt="kind op de stoep met een radio" title="kind leert om te gaan met een radio">
+<img src="../img/kind.jpeg" width="425" height="530" class="pos" alt="kind op de stoep met een radio" title="kind leert om te gaan met een radio">
     <p>Voor een musicus zoals Jesse is het lastig om dat volledig professioneel te doen. Zijn ervaring op de muziekschool bracht hem op het idee een eigen school te beginnen. Jesse zag dat Hannah lesgeven ook geweldig goed kon, dus vroeg hij haar om mee te doen. Ze vonden een mooi pand en ze startten met veel enthousiasme de muziekschool. En daar heeft hij nooit spijt van gekregen! Bij Jesse en Hannah is het leuk én leerzaam!
     </p>
 
    
 
-</td>
-<td class="col-9">
+</div>
+<div class="col-9">
 <h2 class="klrt tekst tek">Hanna</h2>
     
 
@@ -44,7 +44,7 @@
 
 <br>
 
-<img src="../img/hannah.jpeg" width="300" height="330" class="plats" alt="Foto van Hanna met de saxofoon" title="Onze geliefde docent Hanna">
+<img src="../img/hannah.jpeg" width="310" height="350" class="plats" alt="Foto van Hanna met de saxofoon" title="Onze geliefde docent Hanna">
 
 
 <br>
@@ -82,31 +82,22 @@
 
 <p><b>docent Muziek</b></p>
 
-<img src="../img/jesse.jpeg" width="300" height="330" class="plt" alt="Muziek leraar Jesse">
+<img src="../img/jesse.jpeg" width="310" height="350" class="plt" alt="Muziek leraar Jesse">
 <p>Jesse is een zeer muzikale man van 41 jaar. Hij is de vriend van Hannah. In tegenstelling tot Hannah was hij als jonge jongen niet erg geïnteresseerd in muziek en al helemaal niet in muziek maken. Hij ging liever buiten spelen met zijn vriendjes of voetballen in het park. Zijn ouders vonden het echter wel belangrijk dat hij kennisnam van muziek en ze stuurden Jesse naar blokfluitles. Daar leerde hij de beginselen en leerde hij noten lezen.
 </p>
 <p><b>Opleiding</b></p>
 
 <p>Op de middelbare school was al duidelijk hoe talentvol hij was. Daarom ging hij naar het conservatorium, waar hij Hannah ontmoette. Hij richtte zich op vele verschillende instrumenten en werd opgeleid tot een allround musicus. Maar zijn liefde voor de saxofoon en jazz bleef. Als bijbaantje gaf hij ook les op een muziekschool en ook dat ging hem goed af.
 </p>
+
 </div>
+</div>
+<br>
 
 
 
-
-
-
-
-
-
-</td>
-
-
-
-
-</tr>
-</table>
-<footer class="col-12"><p>© Copyright 2021 Muziekschool H&J 
+<footer class="col-12">
+<p>© Copyright 2021 Muziekschool H&J 
 </p><p>(Dit is een oefenopdracht, alle informatie op deze website is fictief.)
 </p></footer>
     
