--- a/MuziekschoolH&J/index.html
+++ b/MuziekschoolH&J/index.html
@@ -13,7 +13,8 @@
     <p>Luisterend oor voor talent!</p>
     
     
-    </header>
+    </header></div>
+    <div class="col-12">
     <nav>
         <ul>
             <li><a class="active" href="#home">Home</a></li>
@@ -22,7 +23,7 @@
             <li><a href="html/contact.html">Contact</a></li>
           </ul> 
 
-    </nav>
+    </nav></div>
 </div>
 
 <div class="col-12 kleur"></div>
@@ -34,7 +35,7 @@
 
     <h2 class="positie">Muziekschool</h2>
        <p><b> voor koperblazers en saxofonisten</b></p>
-        <img src="img/saxofoon.jpeg" width="260" height="165" class="pos" alt="saxofoon op een muziekboek" title="leren saxofoon te spelen">
+        <img src="img/saxofoon.jpeg" width="440" height="280" class="pos" alt="saxofoon op een muziekboek" title="leren saxofoon te spelen">
         <p>
             Evenals bij de klarinet, is bij de saxofoon aan de onderkant van het mondstuk een enkel stuk riet
              bevestigd door middel van een metalen band (de saxofoon hoort dan ook bij de enkelriet-instrumenten).
@@ -58,7 +59,7 @@
 <h2 class="positie klrt">Welkom bij muziekschool H&J</h2>
 <p>Muziekschool voor koperblazers en saxofonisten
 </p>
-<img src="img/trompet.jpeg" alt="man met trompet" title="trompet muzikant" width="260" height="165" class="pos">
+<img src="img/trompet.jpeg" alt="man met trompet" title="trompet muzikant" width="440" height="280" class="pos">
 <p class="ruimte">Zou het niet leuk zijn als je een saxofoon, trompet of een ander blaasinstrument zou kunnen bespelen?
      Dat vergt niet alleen veel oefening, maar het is ook belangrijk dat je daarbij de juiste hulp en 
      ondersteuning krijgt. Hannah en Jesse, de muzikanten achter deze muziekschool, 
@@ -71,7 +72,7 @@
 
 <h2 class="klrt">SPECIALISATIE</h2>
 <p>Muziekschool H&J is gespecialiseerd in jazzmuziek.</p>
-<img src="img/saxofoon2.jpeg" alt="" title="" width="260" height="165" class="pos">
+<img src="img/saxofoon2.jpeg" alt="" title="" width="440" height="280" class="pos">
 <p class="ruimte">Veel muziekscholen richten zich op klassieke muziek. Bij Hannah en Jesse kun je echter ook les krijgen in jazzmuziek.
      Zoals je misschien weet, zijn koperblazers en saxofonisten een zeer belangrijk onderdeel bij jazz.
       Hannah en Jesse zijn grote jazzliefhebbers en hebben zich hierin gespecialiseerd.
