--- a/MuziekschoolH&J/html/contact.html
+++ b/MuziekschoolH&J/html/contact.html
@@ -13,7 +13,8 @@
     <p>Luisterend oor voor talent!</p>
     
     
-    </header>
+    </header></div>
+    <div class="col-12">
     <nav>
         <ul>
             <li><a class="active" href="../index.html">Home</a></li>
@@ -22,10 +23,10 @@
             <li><a href="#/html/contact.html">Contact</a></li>
           </ul> 
 
-    </nav>
+    </nav></div>
 </div>
 <div class="col-12 kleur"></div>
-<div class="col-3 klr">
+<div class="col-3 kll">
     <h2 class="positie">Adresgegevens</h2>
     <p>Muziekschool H&J</p>
     <p>t.a.v Hannah en Jesse</p>
@@ -35,7 +36,7 @@
     <p>muziekschoolhj@inlook.com</p>
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.7551814969465!2d5.975584677441712!3d51.33402267177444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7485bd5bc80c3%3A0xc56f3d8c01a8a374!2sIndustrieterrein%20Panningen%2037%2C%205981%20NK%20Panningen!5e0!3m2!1snl!2snl!4v1715946620346!5m2!1snl!2snl"
-     width="300" height="350"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     width="440" height="450"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
 </div>
