--- a/MuziekschoolH&J/html/overons.html
+++ b/MuziekschoolH&J/html/overons.html
@@ -13,7 +13,8 @@
     <p>Luisterend oor voor talent!</p>
     
     
-    </header>
+    </header></div>
+    <div class="col-12">
     <nav>
         <ul>
             <li><a class="active" href="../index.html">Home</a></li>
@@ -22,15 +23,19 @@
             <li><a href="../html/contact.html">Contact</a></li>
           </ul> 
 
-    </nav>
+    </nav></div>
 </div>
 <div class="col-12 kleur"></div>
 <div class="col-3 klt">
 
 <h2 class="positie">Muziekschool voor iedereen!</h2>
 
-<img src="../img/kind.jpeg" width="425" height="530" class="pos" alt="kind op de stoep met een radio" title="kind leert om te gaan met een radio">
-    <p>Voor een musicus zoals Jesse is het lastig om dat volledig professioneel te doen. Zijn ervaring op de muziekschool bracht hem op het idee een eigen school te beginnen. Jesse zag dat Hannah lesgeven ook geweldig goed kon, dus vroeg hij haar om mee te doen. Ze vonden een mooi pand en ze startten met veel enthousiasme de muziekschool. En daar heeft hij nooit spijt van gekregen! Bij Jesse en Hannah is het leuk én leerzaam!
+<img src="../img/kind.jpeg" width="380" height="480" class="pos" alt="kind op de stoep met een radio" title="kind leert om te gaan met een radio">
+    <p>Voor een musicus zoals Jesse is het lastig om dat volledig professioneel te doen. 
+        Zijn ervaring op de muziekschool bracht hem op het idee een eigen school te beginnen. 
+        Jesse zag dat Hannah lesgeven ook geweldig goed kon, dus vroeg hij haar om mee te doen.
+         Ze vonden een mooi pand en ze startten met veel enthousiasme de muziekschool. 
+         En daar heeft hij nooit spijt van gekregen! Bij Jesse en Hannah is het leuk én leerzaam!
     </p>
 
    
