--- a/MuziekschoolH&J/html/tarieven.html
+++ b/MuziekschoolH&J/html/tarieven.html
@@ -13,7 +13,8 @@
     <p>Luisterend oor voor talent!</p>
     
     
-    </header>
+    </header></div>
+    <div class="col-12">
     <nav>
         <ul>
             <li><a class="active" href="../index.html">Home</a></li>
@@ -22,7 +23,7 @@
             <li><a href="../html/contact.html">Contact</a></li>
           </ul> 
 
-    </nav>
+    </nav></div>
 </div>
 <div class="col-12 kleur"></div>
 <div class="col-3 klr">
