--- a/MuziekschoolH&J/html/overons.html
+++ b/MuziekschoolH&J/html/overons.html
@@ -29,8 +29,8 @@
 <div class="col-3 klt">
 
 <h2 class="positie">Muziekschool voor iedereen!</h2>
-
-<img src="../img/kind.jpeg" width="380" height="480" class="pos" alt="kind op de stoep met een radio" title="kind leert om te gaan met een radio">
+<div class="col-12">
+<img src="../img/kind.jpeg" width="380" height="480" class="pos" alt="kind op de stoep met een radio" title="kind leert om te gaan met een radio"></div>
     <p>Voor een musicus zoals Jesse is het lastig om dat volledig professioneel te doen. 
         Zijn ervaring op de muziekschool bracht hem op het idee een eigen school te beginnen. 
         Jesse zag dat Hannah lesgeven ook geweldig goed kon, dus vroeg hij haar om mee te doen.
