--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -18,7 +18,7 @@
             <p><b>Contact</b></p>
     
     </header></div>
-    <div class="col-12">
+    <div class="col-12 nav">
     <nav><a href="../index.html" class="algpad">Home</a>
          <a href="../html/overons.html">Over ons</a>
          <a href="../html/tarieven.html">Tarieven</a>
