--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -18,7 +18,7 @@
         <p><b>Luisterend oor voor talent!</b></p>
 
 </header></div>
-<div class="col-12">
+<div class="col-12 nav">
 <nav><a href="#index" class="algpad">Home</a>
     <a href="html/overons.html">Over ons</a>
         <a href="html/tarieven.html">Tarieven</a>
