--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <div class="col-12">
+    <div class="col-12 col-">
         <header><h1>Muziekschool H&J</h1>
             <p><b>Contact</b></p>
     
