--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -12,8 +12,8 @@
 <link rel="stylesheet" type="text/css" href="../css/style.css"> 
 
 </head>
-<body>
-    <div class="col-12 col-">
+<body class="col-">
+    <div class="col-12">
         <header><h1>Muziekschool H&J</h1>
             <p><b>Contact</b></p>
     
