--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -13,20 +13,20 @@
 
 </head>
 <body class="col-">
-    <div class="col-12 col-">
+    <div class="col-12">
         <header><h1>Muziekschool H&J</h1>
             <p><b>Contact</b></p>
     
     </header></div>
-    <div class="col-12 nav col-">
+    <div class="col-12 nav">
     <nav><a href="../index.html" class="algpad">Home</a>
          <a href="../html/overons.html">Over ons</a>
          <a href="../html/tarieven.html">Tarieven</a>
          <a href="#/html/contact.html">Contact</a>
     </nav>
     </div>
-    <div class="col-12 kleurregel col-"></div>
-    <div class="col-12 container col-">
+    <div class="col-12 kleurregel"></div>
+    <div class="col-12 container">
         <div class="col-3">
             <h2>Adresgegevens</h2>
             <p>Muziekschool H&J</p>
