--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -91,7 +91,7 @@
 
  </div>
 
-<div class="col-12"><footer>
+<div class="col-12 footer"><footer>
 <p>© Copyright 2021 Muziekschool H&J<br> 
     (Dit is een oefenopdracht, alle informatie op deze website is fictief.)</p>
 </footer>
