--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -12,12 +12,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <link rel="stylesheet" type="text/css" href="css/style.css">
-<style>
-[class*="col-"] {
-  width: 100%;
-}
 
-</style>
 </head>
 
 <body>
@@ -43,7 +38,7 @@
 <iframe width="560" height="315" class="midpos" src="https://www.youtube.com/embed/SQko1O5ASyQ?si=c93KZbRdRZ_v1x69" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
    
-<div class="col-">
+<div>
       <p class="ttr"> 
         
        
