--- a/TapijtvanVlaardingen/html/contact.html
+++ b/TapijtvanVlaardingen/html/contact.html
@@ -66,7 +66,7 @@ Hier vindt u een aantal interessante links met andere projecten en interessante 
 
     <p class="ttx">Voor meer informatie</p><br>
         <div class="tpg">
-        https://www.facebook.com/TapijtVanVlaardingen<br>www.tapijtvanvlaardingen<br>of mail naar<br>hettapijtvanvlaardingen@gmail.com</div><br>
+        www.tapijtvanvlaardingen<br>of mail naar<br>hettapijtvanvlaardingen@gmail.com</div><br>
     <br>
 
 
@@ -75,7 +75,7 @@ Hier vindt u een aantal interessante links met andere projecten en interessante 
         <a href="https://anbi.nl/zoek-anbi/" target="_blank"><img src="../img/ANBI.jpg" alt="" title="" class="positie"><a href="https://www.cultuurfonds.nl/" target="_blank"><img src="../img/Het_Cultuurfonds_logo,_2023.jpg" alt="" title="" class="positie"></a>
    <a href="https://vlaardingen750.nl/" target="_blank"><img src="../img/Vlaardingen 750 jaar.png" class="positie"></a>
    <a href="http://www.johnrabou.nl/" target="_blank"><img src="../img/johnrabou.jpg" class="positie"></a>
-   <!--<img src="../img/TvV.jpg" class="positie">-->
+   
 </footer>
 </body>
 </html>
