--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<div class="col-12">
+<div class="col-12 header">
     <header><h1>Muziekschool H&J</h1>
         <p><b>Luisterend oor voor talent!</b></p>
 
