--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<div class="col-12 header">
+<div class="col-12">
     <header><h1>Muziekschool H&J</h1>
         <p><b>Luisterend oor voor talent!</b></p>
 
@@ -29,9 +29,10 @@
 </div>
 
 
-<div class="col-12 kleurregel"></div>
 
+<div class="col-12 kleurregel"></div>
 <div class="col-12 container">
+    
 <div class="col-3">
     <h2>Muziekschool</h2>
     <p><b>voor koperblazers en saxofonisten</b></p>
