--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -60,7 +60,7 @@
     </h2>
     <p><b>Muziekschool voor koperblazers en saxofonisten</b></p>
     
-     <img src="img/trompet.jpg" alt="Muziekant met trompet" title="Trompetist" class="verspringen">
+     <img src="img/trompet.jpg" alt="Muziekant met trompet" title="Trompetist" class="verspringen img">
 <p>Zou het niet leuk zijn als je een saxofoon, 
         trompet of een ander blaasinstrument zou kunnen bespelen? Dat vergt niet alleen veel oefening,
          maar het is ook belangrijk dat je daarbij de juiste hulp en ondersteuning krijgt.
@@ -73,7 +73,7 @@
 
 <h2 class="tekstkleur">SPECIALISATIE</h2>
 <p><b>Muziekschool H&J is gespecialiseerd in jazzmuziek.</b></p>
-<img src="img/saxofoon2.jpg" alt="Saxofonist aan het spelen" title="Saxofoon leren spelen" class="verspringen">
+<img src="img/saxofoon2.jpg" alt="Saxofonist aan het spelen" title="Saxofoon leren spelen" class="verspringen img">
 <p>Veel muziekscholen richten zich op klassieke muziek. Bij Hannah en Jesse kun je echter
      ook les krijgen in jazzmuziek. Zoals je misschien weet, zijn koperblazers en saxofonisten
       een zeer belangrijk onderdeel bij jazz. Hannah en Jesse zijn grote jazzliefhebbers
