--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -36,7 +36,7 @@
 <div class="col-3">
     <h2>Muziekschool</h2>
     <p><b>voor koperblazers en saxofonisten</b></p>
-    <img src="img/saxofoon.jpg" alt="Saxofoon op muziekboek" title="Saxofoon leren spelen" class="regelv">
+    <img src="img/saxofoon.jpg" alt="Saxofoon op muziekboek" title="Saxofoon leren spelen" class="regelv img">
     <p>Evenals bij de klarinet, is bij de saxofoon aan
          de onderkant van het mondstuk een enkel
           stuk riet bevestigd door middel van een
