--- a/Muziekschool/html/overons.html
+++ b/Muziekschool/html/overons.html
@@ -19,11 +19,12 @@
     
     </header></div>
     <div class="col-12 nav">
-    <nav><a href="../index.html" class="algpad">Home</a>
-         <a href="#/html/overons.html">Over ons</a>
-         <a href="../html/tarieven.html">Tarieven</a>
-         <a href="../html/contact.html">Contact</a>
-    </nav>
+    <ul>
+        <li><a href="../index.html" class="algpad">Home</a></li>
+         <li><a href="#/html/overons.html">Over ons</a></li>
+         <li><a href="../html/tarieven.html">Tarieven</a></li>
+         <li><a href="../html/contact.html">Contact</a></li>
+    </ul>
     </div>
     <div class="col-12 kleurregel"></div>
     <div class="col-12 container">
