--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -21,11 +21,12 @@
 
 
 <div class="col-12 nav">
-<nav><a href="#index" class="algpad">Home</a>
-    <a href="html/overons.html">Over ons</a>
-        <a href="html/tarieven.html">Tarieven</a>
-            <a href="html/contact.html">Contact</a>
-</nav>
+    <ul>
+        <li><a href="#index" class="algpad">Home</a></li>
+        <li><a href="html/overons.html">Over ons</a></li>
+        <li><a href="html/tarieven.html">Tarieven</a></li>
+        <li><a href="html/contact.html">Contact</a></li>
+      </ul>
 </div>
 
 
