--- a/Muziekschool/html/tarieven.html
+++ b/Muziekschool/html/tarieven.html
@@ -19,11 +19,12 @@
 
 </header></div>
 <div class="col-12 nav">
-<nav><a href="../index.html" class="algpad">Home</a>
-     <a href="../html/overons.html">Over ons</a>
-     <a href="#/html/tarieven.html">Tarieven</a>
-     <a href="../html/contact.html">Contact</a>
-</nav>
+<ul>
+    <li><a href="../index.html" class="algpad">Home</a></li>
+     <li><a href="../html/overons.html">Over ons</a></li>
+     <li><a href="#/html/tarieven.html">Tarieven</a></li>
+     <li><a href="../html/contact.html">Contact</a></li>
+</ul>
 </div>
 <div class="col-12 kleurregel"></div>
 <div class="col-12 container">
@@ -36,7 +37,7 @@
         <p>Groepsles kinderen: € 10,- per uur.</p>
    
     </div>
-            <div class="col-7 blok2"><!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
+            <div class="col-9 blok2"><!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
             <h2 class="tekstkleur">Voorwaarden</h2>
             <p><b>Algemene voorwaarden - Muziekschool H&J</b></p>
             <p><b>Artikel 1:</b> Inschrijving</p><hr>
