--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -22,7 +22,7 @@
 
 <div class="col-12 nav">
     <ul>
-        <li><a href="#index" class="algpad">Home</a></li>
+        <li><a href="#index">Home</a></li>
         <li><a href="html/overons.html">Over ons</a></li>
         <li><a href="html/tarieven.html">Tarieven</a></li>
         <li><a href="html/contact.html">Contact</a></li>
