--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -35,7 +35,7 @@
 <div class="col-12 container">
     
 <div class="col-3">
-    <h2>Muziekschool</h2>
+    <h2 class="tvbl">Muziekschool</h2>
     <p><b>voor koperblazers en saxofonisten</b></p>
     <img src="img/saxofoon.jpg" alt="Saxofoon op muziekboek" title="Saxofoon leren spelen" class="regelv img">
     <p>Evenals bij de klarinet, is bij de saxofoon aan
