--- a/Muziekschool/html/overons.html
+++ b/Muziekschool/html/overons.html
@@ -29,7 +29,7 @@
     <div class="col-12 kleurregel"></div>
     <div class="col-12 container">
         <div class="col-3">
-            <h2>Muziekschool voor iedereen!</h2>
+            <h2 class="tvbl">Muziekschool voor iedereen!</h2>
         <img src="../img/kind.jpg" alt="Kind zit op de stoep met een radio" title="jazzmuziek is voor alle leeftijden" class="verspringen img">
             <p>Voor een musicus zoals Jesse is het lastig om
                  dat volledig professioneel te doen.Zijn
