--- a/Muziekschool/html/tarieven.html
+++ b/Muziekschool/html/tarieven.html
@@ -29,7 +29,7 @@
 <div class="col-12 kleurregel"></div>
 <div class="col-12 container">
     <div class="col-3">
-        <h2>Tarieven</h2>
+        <h2 class="tvbl">Tarieven</h2>
         <p>Individuele les: € 30,- per half uur.</p>
         <hr>
         <p>Groepsles: Dezelfde prijs per persoon (dus € 30,- gedeeld door het aantal deelnemers).</p>
