--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -29,7 +29,7 @@
     <div class="col-12 kleurregel"></div>
     <div class="col-12 container">
         <div class="col-3">
-            <h2>Adresgegevens</h2>
+            <h2 class="tvbl">Adresgegevens</h2>
             <p>Muziekschool H&J</p>
             <p>t.a.v Hannah en Jesse</p>
             <p>Industrieterrein 37</p>
