--- a/Muziekschool/html/overons.html
+++ b/Muziekschool/html/overons.html
@@ -43,7 +43,7 @@
                 <div class="col-7 blok2"><!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
                 <h2 class="tekstkleur">Hannah</h2>
                 <p><b>docente Muziek</b></p>
-            <img src="../img/hannah.jpg" alt="Hannah met een saxofoon" title="Lerares Hannah voor de saxofoon" class="positie">
+            <img src="../img/hannah.jpg" alt="Hannah met een saxofoon" title="Lerares Hannah voor de saxofoon" class="positie img2">
   <p>Hannah is een vrolijke, goedlachse vrouw van 39 jaar. Ze is de<br> 
     vriendin van Jesse. Hannah is al van jongs af aan geïnteresseerd <br>
     in veel verschillende muziekstijlen. Haar ouders hebben het met<br>
@@ -74,7 +74,7 @@
 <br>
 <h2 class="tekstkleur">Jesse</h2>
 <p><b>docent Muziek</b></p>
-<img src="../img/jesse.jpg" alt="Jesse met de trombone" title="Muziek leraar Jesse" class="posi">
+<img src="../img/jesse.jpg" alt="Jesse met de trombone" title="Muziek leraar Jesse" class="posi img2">
 <p>Jesse is een zeer muzikale man van 41 jaar. Hij is de vriend van<br>
      Hannah. In tegenstelling tot Hannah was hij als jonge jongen niet<br>
       erg geïnteresseerd in muziek en al helemaal niet in muziek maken.<br>
