--- a/Muziekschool/html/overons.html
+++ b/Muziekschool/html/overons.html
@@ -98,8 +98,8 @@
             </div>
             </div>
     <div class="col-12"><footer>
-        <p>© Copyright 2021 Muziekschool H&J<br> 
-            (Dit is een oefenopdracht, alle informatie op deze website is fictief.)</p>
+        <p><b>© Copyright 2021 Muziekschool H&J<br> 
+            (Dit is een oefenopdracht, alle informatie op deze website is fictief.)</b></p>
         </footer>
         </div>   
 </body>
