--- a/Muziekschool/html/tarieven.html
+++ b/Muziekschool/html/tarieven.html
@@ -37,7 +37,7 @@
         <p>Groepsles kinderen: € 10,- per uur.</p>
    
     </div>
-            <div class="col-9 blok2"><!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
+            <div class="col-9 blok2 bodemr">
             <h2 class="tekstkleur">Voorwaarden</h2>
             <p><b>Algemene voorwaarden - Muziekschool H&J</b></p>
             <p><b>Artikel 1:</b> Inschrijving</p><hr>
@@ -65,8 +65,8 @@
 
 
 <div class="col-12"><footer>
-    <p>© Copyright 2021 Muziekschool H&J<br> 
-        (Dit is een oefenopdracht, alle informatie op deze website is fictief.)</p>
+    <p><b>© Copyright 2021 Muziekschool H&J<br> 
+        (Dit is een oefenopdracht, alle informatie op deze website is fictief.)</b></p>
     </footer>
     </div>
 </body>
