--- a/Portfolio/html/page4.html
+++ b/Portfolio/html/page4.html
@@ -36,7 +36,7 @@
   <ul class="dropdown-menu txc">
     <li><a class="dropdown-item" href="../index.html">Home</a></li>
     <li><a class="dropdown-item" href="page2.html">Bootstrap</a></li>
-    <li><a class="dropdown-item" href="page4.html">Praktijk examen<br>Mobile fisrt</a></li>
+    <li><a class="dropdown-item" href="page3.html">Praktijk examen<br>Mobile fisrt</a></li>
     <li><a class="dropdown-item" href="page5.html">Vrijwilligers<br>werk</a></li>
   </ul>
   </div>
@@ -44,7 +44,7 @@
 
 </header>
 <div class="space"></div>
-<div class="col clk pst bx1"><a href="https://hugo2610.github.io/Website-Hugo/Glasvezel" target="_blank">Glasvezel</a></div> 
+<div class="col clk pst bx1"><a href="" target="_blank">Nog niet klaar!</a></div> 
 
 
 
