--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -32,6 +32,8 @@
                   <ul class="dropdown-menu txc">
                     <li><a class="dropdown-item" href="html/page2.html">Bootstrap</a></li>
                     <li><a class="dropdown-item" href="html/page3.html">Javascript & JQuery</a></li>
+                    <li><a class="dropdown-item" href="html/page4.html">Praktijk examen<br>Mobile fisrt</a></li>
+                    <li><a class="dropdown-item" href="html/page5.html">Vrijwilligers<br>werk</a></li>
                     
                     
                   </ul>
