--- a/Portfolio/html/page5.html
+++ b/Portfolio/html/page5.html
@@ -37,14 +37,15 @@
     <li><a class="dropdown-item" href="../index.html">Home</a></li>
     <li><a class="dropdown-item" href="page2.html">Bootstrap</a></li>
     <li><a class="dropdown-item" href="page4.html">Praktijk examen<br>Mobile fisrt</a></li>
-    <li><a class="dropdown-item" href="page5.html">Vrijwilligers<br>werk</a></li>
+    <li><a class="dropdown-item" href="page3.html">Vrijwilligers<br>werk</a></li>
+
   </ul>
   </div>
   
 
 </header>
 <div class="space"></div>
-<div class="col clk pst bx1"><a href="https://hugo2610.github.io/Website-Hugo/Glasvezel" target="_blank">Glasvezel</a></div> 
+<div class="col clk pst bx1"><a href="https://hugo2610.github.io/Website-Hugo/TapijtvanVlaardingen" target="_blank">Het Tapijt van Vlaardingen</a></div> 
 
 
 
