--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 <div class="col-12 header">
-    <header><h1>Muziekschool H&J</h1>
+
+    <header>
+        <h1>Muziekschool H&J</h1>
         <p><b>Luisterend oor voor talent!</b></p>
 
 </header></div>
@@ -31,7 +33,7 @@
 
 
 
-<div class="col-12 kleurregel"></div>
+<div class="kleurregel"></div>
 <div class="col-12 container">
     
 <div class="col-3">
