--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -33,7 +33,7 @@
 
 
 
-<div class="kleurregel"></div>
+<div class="col-12 kleurregel"></div>
 <div class="col-12 container">
     
 <div class="col-3">
