--- a/Muziekschool/html/overons.html
+++ b/Muziekschool/html/overons.html
@@ -44,51 +44,51 @@
                 <h2 class="tekstkleur">Hannah</h2>
                 <p><b>docente Muziek</b></p>
             <img src="../img/hannah.jpg" alt="Hannah met een saxofoon" title="Lerares Hannah voor de saxofoon" class="positie img3">
-  <p>Hannah is een vrolijke, goedlachse vrouw van 39 jaar. Ze is de<br> 
-    vriendin van Jesse. Hannah is al van jongs af aan geïnteresseerd <br>
-    in veel verschillende muziekstijlen. Haar ouders hebben het met<br>
-     de paplepel ingegoten. Langzamerhand werd de trompet echter<br>
-      haar favoriete instrument. Ze speelde op school en had al jong<br>
+  <p>Hannah is een vrolijke, goedlachse vrouw van 39 jaar. Ze is de 
+    vriendin van Jesse. Hannah is al van jongs af aan geïnteresseerd 
+    in veel verschillende muziekstijlen. Haar ouders hebben het met
+     de paplepel ingegoten. Langzamerhand werd de trompet echter
+      haar favoriete instrument. Ze speelde op school en had al jong
        optredens in buurthuizen, op braderieën, enzovoorts.
 </p>
 
-<p>Hannah volgde zelf vanaf haar zesde jaar les op de muziekschool.<br>
-     Vanwege haar talent kreeg zij later privéles. Op de middelbare<br>
-      school besteedde ze veel aandacht aan haar studie en de muziek<br>
-       schoot er een beetje bij in. Maar toen ze haar diploma had<br>
-        behaald, was het conservatorium een logische keus. Ook op het<br>
-         conservatorium viel haar talent op. Ze werd gevraagd voor het<br>
-          studentenorkest en speelde in haar vrije in een jazzband. Daar<br>
-           ontmoette zij Jesse. Gedurende haar studietijd kwamen<br>
-            medestudenten regelmatig naar haar toe met het verzoek om<br>
-             hulp. Dat waren niet alleen trompetstudenten, maar ook studenten<br>
-              die andere blaasinstrumenten bespeelden. Hannah merkte dat<br>
-               bijles geven haar heel goed afging en dat ze het ontzettend leuk<br>
+<p>Hannah volgde zelf vanaf haar zesde jaar les op de muziekschool.
+     Vanwege haar talent kreeg zij later privéles. Op de middelbare
+      school besteedde ze veel aandacht aan haar studie en de muziek
+       schoot er een beetje bij in. Maar toen ze haar diploma had
+        behaald, was het conservatorium een logische keus. Ook op het
+         conservatorium viel haar talent op. Ze werd gevraagd voor het
+          studentenorkest en speelde in haar vrije in een jazzband. Daar
+           ontmoette zij Jesse. Gedurende haar studietijd kwamen
+            medestudenten regelmatig naar haar toe met het verzoek om
+             hulp. Dat waren niet alleen trompetstudenten, maar ook studenten
+              die andere blaasinstrumenten bespeelden. Hannah merkte dat
+               bijles geven haar heel goed afging en dat ze het ontzettend leuk
                 vond.</p>
 
 
-<p>Toen Jesse met het idee kwam om samen een muziekschool te<br>
-     beginnen, hoefde Hannah niet lang na te denken. Het was dé manier om van haar hobby haar beroep te maken<br>
+<p>Toen Jesse met het idee kwam om samen een muziekschool te
+     beginnen, hoefde Hannah niet lang na te denken. Het was dé manier om van haar hobby haar beroep te maken
       en om muziek maken te combineren met lesgeven. Bij Hannah zijn jong en oud in goede handen!
 </p>
 <br>
 <h2 class="tekstkleur">Jesse</h2>
 <p><b>docent Muziek</b></p>
 <img src="../img/jesse.jpg" alt="Jesse met de trombone" title="Muziek leraar Jesse" class="posi img3">
-<p>Jesse is een zeer muzikale man van 41 jaar. Hij is de vriend van<br>
-     Hannah. In tegenstelling tot Hannah was hij als jonge jongen niet<br>
-      erg geïnteresseerd in muziek en al helemaal niet in muziek maken.<br>
-       Hij ging liever buiten spelen met zijn vriendjes of voetballen in het<br>
-        park. Zijn ouders vonden het echter wel belangrijk dat hij<br>
-         kennis nam van muziek en ze stuurden Jesse naar blokfluitles.<br>
+<p>Jesse is een zeer muzikale man van 41 jaar. Hij is de vriend van
+     Hannah. In tegenstelling tot Hannah was hij als jonge jongen niet
+      erg geïnteresseerd in muziek en al helemaal niet in muziek maken.
+       Hij ging liever buiten spelen met zijn vriendjes of voetballen in het
+        park. Zijn ouders vonden het echter wel belangrijk dat hij
+         kennis nam van muziek en ze stuurden Jesse naar blokfluitles.
           Daar leerde hij de beginselen en leerde hij noten lezen.
 </p>
 <h2>Opleiding</h2>
-<p>Op de middelbare school was al duidelijk hoe talentvol hij was.<br>
-     Daarom ging hij naar het conservatorium, waar hij Hannah<br>
-      ontmoette. Hij richtte zich op vele verschillende instrumenten en<br>
-       werd opgeleid tot een allround musicus. Maar zijn liefde voor de<br>
-        saxofoon en jazz bleef. Als bijbaantje gaf hij ook les op een<br>
+<p>Op de middelbare school was al duidelijk hoe talentvol hij was.
+     Daarom ging hij naar het conservatorium, waar hij Hannah
+      ontmoette. Hij richtte zich op vele verschillende instrumenten en
+       werd opgeleid tot een allround musicus. Maar zijn liefde voor de
+        saxofoon en jazz bleef. Als bijbaantje gaf hij ook les op een
          muziekschool en ook dat ging hem goed af.
 </p>
 
