--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-12 kleurregel"></div>
     <div class="col-12 container">
-        <div class="col-3">
+        <div class="col-3 beperkt">
             <h2 class="tvbl">Adresgegevens</h2>
             <p>Muziekschool H&J</p>
             <p>t.a.v Hannah en Jesse</p>
