--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -29,7 +29,7 @@
     <div class="col-12 kleurregel"></div>
     <div class="col-12 container">
 
-        <div class="col-3 beperkt">
+        <div class="col-3">
             <h2 class="tvbl">Adresgegevens</h2>
             <p>Muziekschool H&J</p>
             <p>t.a.v Hannah en Jesse</p>
@@ -39,7 +39,7 @@
             <p>muziekschoolhj@inlook.com</p>
             
         
-        <div>
+        <div class="beperkt">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.7551814969465!2d5.975584677441712!3d51.33402267177444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7485bd5bc80c3%3A0xc56f3d8c01a8a374!2sIndustrieterrein%20Panningen%2037%2C%205981%20NK%20Panningen!5e0!3m2!1snl!2snl!4v1715946620346!5m2!1snl!2snl"
              width="440" height="450" class="size" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
