--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="../css/style.css"> 
 
 </head>
-<body class="col-">
+<body>
     <div class="col-12">
         <header><h1>Muziekschool H&J</h1>
             <p><b>Contact</b></p>
