--- a/Muziekschool/html/contact.html
+++ b/Muziekschool/html/contact.html
@@ -32,7 +32,7 @@
         <div class="col-3">
             <h2 class="tvbl">Adresgegevens</h2>
             <p>Muziekschool H&J</p>
-            <p>t.a.v Hannah en Jesse Industrieterrein 37</p>
+            <p>t.a.v Hannah en Jesse, Industrieterrein 37</p>
             <p>5981 NK Panningen</p>
             <p>0123-456789</p>
             <p>muziekschoolhj@inlook.com</p>
