--- a/Muziekschool/html/overons.html
+++ b/Muziekschool/html/overons.html
@@ -40,7 +40,8 @@
                     spijt van gekregen! Bij Jesse en Hannah is het leuk én leerzaam!
             </p>
         </div>
-                <div class="col-7 blok2"><!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
+        <!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
+                <div class="col-7 blok2">
                 <h2 class="tekstkleur">Hannah</h2>
                 <p><b>docente Muziek</b></p>
             <img src="../img/hannah.jpg" alt="Hannah met een saxofoon" title="Lerares Hannah voor de saxofoon" class="positie img3">
