--- a/Muziekschool/index.html
+++ b/Muziekschool/index.html
@@ -58,7 +58,8 @@
               instrument verschillende tonen maken.
     </p>
 </div>
-<div class="col-7 blok2"><!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
+<!--col-7 instead of col-9 for fitting text and img on the wright place as ask-->
+<div class="col-7 blok2">
     <h2 class="tekstkleur">Welkom bij muziekschool H&J
     </h2>
     <p><b>Muziekschool voor koperblazers en saxofonisten</b></p>
