--- a/Portfolio/html/page2.html
+++ b/Portfolio/html/page2.html
@@ -38,7 +38,7 @@
   <ul class="dropdown-menu txc">
     <li><a class="dropdown-item" href="../index.html">Home</a></li>
     <li><a class="dropdown-item" href="page3.html">JavaScript & JQuery</a></li>
-    <li><a class="dropdown-item" href="page4.html">Praktijk examen<br>Mobile fisrt</a></li>
+    <li><a class="dropdown-item" href="page4.html">Praktijk examen<br>Webdesign</a></li>
     <li><a class="dropdown-item" href="page5.html">Vrijwilligers<br>werk</a></li>
   </ul>
   </div>
