--- a/Portfolio/html/page3.html
+++ b/Portfolio/html/page3.html
@@ -36,7 +36,7 @@
   <ul class="dropdown-menu txc">
     <li><a class="dropdown-item" href="../index.html">Home</a></li>
     <li><a class="dropdown-item" href="page2.html">Bootstrap</a></li>
-    <li><a class="dropdown-item" href="page4.html">Praktijk examen<br>Mobile fisrt</a></li>
+    <li><a class="dropdown-item" href="page4.html">Praktijk examen<br>Webdesign</a></li>
     <li><a class="dropdown-item" href="page5.html">Vrijwilligers<br>werk</a></li>
   </ul>
   </div>
