--- a/Portfolio/html/page2.html
+++ b/Portfolio/html/page2.html
@@ -54,7 +54,7 @@
 <div class="col"><div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <button class="accordion-button alert alert-info"  type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
           Accordion Item #1
         </button>
       </h2>
@@ -64,9 +64,11 @@
         </div>
       </div>
     </div>
+
+
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <button class="accordion-button collapsed alert alert-danger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
           Accordion Item #2
         </button>
       </h2>
@@ -76,6 +78,8 @@
         </div>
       </div>
     </div>
+
+
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -94,7 +98,7 @@
   
 
 
-<div class="col">
+<div class="col bg-success">
     <div class="card" aria-hidden="true">
   <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
   <div class="card-body">
@@ -113,7 +117,7 @@
 </div></div>
 
 
-    <div class="col">
+    <div class="col bg-warning">
         <div class="card" aria-hidden="true">
     <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
     <div class="card-body">
@@ -131,7 +135,7 @@
     </div>
   </div></div>
 
-<div class="col">
+<div class="col bg-primary">
     <div class="card" aria-hidden="true">
     <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
     <div class="card-body">
