--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -53,9 +53,10 @@
 <p>Van werken met HTML, CSS, een introductie van bootstrap5 en Javascript & JQuery</p>
 <p></p><br>
 
-<p><a href="Getuigschrift.pdf" target="_blank" class="link-primary cvb">Getuigschrift</a>
-   <a href="Praktijk examen .pdf" class="link-primary cvb" target="_blank">Praktijk examen</a>
-   <a href="CV Hugo krijnberg.pdf" class="link-primary cvb" target="_blank">Curriculum Vitae</a>
+<p><a href="Scan_20240723.jpg" target="_blank" class="link-primary cvb">Diploma</a>
+  <a href="Getuigschrift.pdf" target="_blank" class="link-primary cvb">Getuigschrift</a>
+   <a href="Scan_20240723 (2).jpg" class="link-primary cvb" target="_blank">Cijferlijst</a>
+   <a href="CV Hugo krijnberg (1).pdf" class="link-primary cvb" target="_blank">Curriculum Vitae</a>
     </p>
            </div> 
 
